runtime-configs/tpk8s/tanzu-config/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: APP_NAME
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: APP_NAME
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-APP_NAME
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: APP_NAME
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
